After an evaluation, GNOME has moved from Bugzilla to GitLab. Learn more about GitLab.
No new issues can be reported in GNOME Bugzilla anymore.
To report an issue in a GNOME project, go to GNOME GitLab.
Do not go to GNOME Gitlab for: Bluefish, Doxygen, GnuCash, GStreamer, java-gnome, LDTP, NetworkManager, Tomboy.
Bug 776660 - Mouse Settings do not show for TrackPoint
Mouse Settings do not show for TrackPoint
Status: RESOLVED FIXED
Product: gnome-control-center
Classification: Core
Component: Mouse
3.22.x
Other Linux
: Normal major
: ---
Assigned To: Control-Center Maintainers
Control-Center Maintainers
Depends on:
Blocks:
 
 
Reported: 2016-12-31 22:13 UTC by kdaker
Modified: 2017-01-09 16:43 UTC
See Also:
GNOME target: ---
GNOME version: ---


Attachments
common: Handle trackpoint devices in GsdDeviceManagerX11 (995 bytes, patch)
2017-01-02 18:25 UTC, Rui Matos
committed Details | Review

Description kdaker 2016-12-31 22:13:47 UTC
The normal settings behavior is that the mouse settings appear / disappear whether a mouse is connected or disconnected.

However on thinkpad laptops, the trackpoint is affected by mouse settings and not trackpad settings. The mouse settings do not show when no mouse is connected.

If you connect a mouse and change the settings (ex. speed), the trackpoint is affected. Unplugging the mouse makes those settings unchangeable for the trackpoint now.

Currently happening with Fedora 25. I have not tested other distributions.
Comment 1 Rui Matos 2017-01-02 18:25:57 UTC
Created attachment 342729 [details] [review]
common: Handle trackpoint devices in GsdDeviceManagerX11

With gtk+ >= 3.22 trackpoints are classified separately from mice so
we need to handle them here.

In the future we might want to expose this further if we start adding
trackpoint specific UI.
Comment 2 Bastien Nocera 2017-01-02 23:39:18 UTC
Review of attachment 342729 [details] [review]:

Sure. Although a follow-up patch to remove the default: would make sure we handle all the possibilities and avoid problems in the near future.
Comment 3 Rui Matos 2017-01-09 16:43:20 UTC
Removed the default case so that we get a compile time warning in case
this happens again.

Attachment 342729 [details] pushed as 1e7631d - common: Handle trackpoint devices in GsdDeviceManagerX11