common: Handle trackpoint devices in GsdDeviceManagerX11

With gtk+ >= 3.22 trackpoints are classified separately from mice so
we need to handle them here. Also, remove the default case so that we
get a compilation warning in case this happens again.

In the future we might want to expose this further if we start adding
trackpoint specific UI.

https://bugzilla.gnome.org/show_bug.cgi?id=776660