panels/common/gsd-device-manager-x11.c
@@ -55,6 +55,7 @@ device_get_device_type (GdkDevice *gdk_device)
 
 	switch (source) {
 	case GDK_SOURCE_MOUSE:
+	case GDK_SOURCE_TRACKPOINT:
 		return GSD_DEVICE_TYPE_MOUSE;
 	case GDK_SOURCE_PEN:
 	case GDK_SOURCE_ERASER:
@@ -70,10 +71,9 @@ device_get_device_type (GdkDevice *gdk_device)
 		return GSD_DEVICE_TYPE_TOUCHPAD;
 	case GDK_SOURCE_TABLET_PAD:
 		return GSD_DEVICE_TYPE_PAD;
-	default:
-		g_warning ("Unhandled input source %d\n", source);
 	}
 
+	g_warning ("Unhandled input source %d\n", source);
 	return 0;
 }
 
